media queries to display image cards correctly on smaller screens

--- a/src/components/ImageCard/ImageCard.css
+++ b/src/components/ImageCard/ImageCard.css
@@ -11,12 +11,13 @@
 #pexelsCard img{
   width: 100%;
   height: 95%;
-  
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width:700px){
   #pexelsCard {
       width: 90%;
       height: auto;
   }
 };
+
+
